# loom

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  flake.nix
.github/workflows/: ci.yml  nix.yml
cmake/: loomConfig.cmake
include/loom/: asio.hpp  async.hpp  execution.hpp  fabric_query.hpp  loom.hpp  provider_range.hpp
include/loom/asio/: asio_context.hpp  basic_endpoint.hpp  completion_token.hpp  fabric_service.hpp  registered_buffer.hpp
include/loom/async/: completion_queue.hpp
include/loom/core/: address.hpp  address_vector.hpp  allocator.hpp  atomic.hpp  collective.hpp  concepts.hpp  counter.hpp  domain.hpp  endpoint.hpp  endpoint_options.hpp  endpoint_types.hpp  error.hpp  event_queue.hpp  fabric.hpp  formatters.hpp  immediate_data.hpp  memory.hpp  messaging.hpp  mr_cache.hpp  passive_endpoint.hpp  progress_policy.hpp  provider_atomic.hpp  provider_aware.hpp  request_context.hpp  result.hpp  rma.hpp  scalable_endpoint.hpp  shared_context.hpp  submission_context.hpp  trigger.hpp  types.hpp
include/loom/core/concepts/: address.hpp  address_vector.hpp  atomic.hpp  callback.hpp  capabilities.hpp  compile_time.hpp  completion_queue.hpp  context.hpp  data.hpp  endpoint.hpp  event.hpp  fabric_info.hpp  fabric_object.hpp  memory.hpp  policy.hpp  protocol_concepts.hpp  provider_traits.hpp  result.hpp  strong_types.hpp
include/loom/core/crtp/: crtp_detection.hpp  crtp_tags.hpp  event_base.hpp  fabric_object_base.hpp  remote_memory_base.hpp
include/loom/detail/: conversions.hpp
include/loom/execution/: concepts.hpp  operation_state.hpp  receiver.hpp  rma.hpp  scheduler.hpp  send_recv.hpp
include/loom/protocol/: protocol.hpp
nix/pkgs/libfabric/: default.nix
nix/pkgs/rapids-cmake/: default.nix
nix/pkgs/stdexec/: default.nix
src/: address.cpp  address_vector.cpp  atomic.cpp  collective.cpp  completion_queue.cpp  counter.cpp  domain.cpp  endpoint.cpp  endpoint_bind.cpp  endpoint_options.cpp  error.cpp  event_queue.cpp  fabric.cpp  memory.cpp  passive_endpoint.cpp  rma.cpp  scalable_endpoint.cpp  shared_context.cpp  trigger.cpp
tests/: CMakeLists.txt  benchmark_async.cpp  benchmark_comparison.cpp  benchmark_mpi_setup.hpp  test_address.cpp  test_asio_context.cpp  test_asio_endpoint.cpp  test_asio_fabric_service.cpp  test_asio_registered_buffer.cpp  test_async_senders.cpp  test_atomic.cpp  test_callback_concepts.cpp  test_collective.cpp  test_concepts.cpp  test_data_concepts.cpp  test_endpoint_types.cpp  test_error.cpp  test_fabric_query.cpp  test_formatters.cpp  test_memory.cpp  test_mr_cache.cpp  test_provider_atomic.cpp  test_provider_aware.cpp  test_rma.cpp  test_submission_context.cpp  test_trigger.cpp  test_types.cpp  ut.hpp
